@@ -1,4 +1,5 @@
 <?php
+
 /* * *************************************************************
  *  Copyright notice
  *
@@ -23,22 +24,20 @@
  * ************************************************************* */
 
 /**
- * View Helper fuer einen TypoLink
- * @todo nicht die alte Api anzapfen
- * @todo Zeitzone einfuegen
+ * Description of SigelViewHelper
  * $Id$
- * @author ingop
+ * @author Ingo Pfennigstorf
  */
-class Tx_Standorte_ViewHelpers_TimeFormatViewHelper extends Tx_Fluid_Core_ViewHelper_AbstractViewHelper {
+class Tx_Standorte_ViewHelpers_SigelViewHelper extends Tx_Fluid_Core_ViewHelper_AbstractViewHelper {
 
 	/**
 	 * Formats a given timestamp in seconds to a human readable format
 	 *
-	 * @param int $ts The timestamp
-	 * @return string The formated Date/Time
+	 * @param sigel $sigel Das zu ueberpruefende Sigel
+	 * @return string Das formatierte Sigel
 	 */
-	public function render($ts) {
-		$ts = $ts - 3600;
+	public function render($sigel) {
+		
 		return date('H:i', $ts);
 	}
 
