@@ -1,6 +1,36 @@
 <?php
+
+/* * *************************************************************
+ *  Copyright notice
+ *
+ *  (c) 2011 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+ *  All rights reserved
+ *
+ *  This script is part of the TYPO3 project. The TYPO3 project is
+ *  free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  The GNU General Public License can be found at
+ *  http://www.gnu.org/copyleft/gpl.html.
+ *
+ *  This script is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  This copyright notice MUST APPEAR in all copies of the script!
+ * ************************************************************* */
+
+/**
+ * Ajax Funktion fuer das bedarfsorientierte Nachladen der Maps
+ * $Id$
+ * @author Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+ */
+
 if (!$_POST['uid']) {
-	die('geh fort');
+	die('Direktes Aufrufen des Scripts ist nicht erlaubt');
 }
 
 $uid = intval(t3lib_div::_GP('uid'));
@@ -80,13 +110,8 @@ function generiereAdresse($titel, $strasse, $plz, $ort) {
 		title: "<?php echo $titel; ?>"
 	});
 
-	//Oeffnen des Infofensters
-	infowindow.open(map,marker);
-
 	//Click Listener
 	google.maps.event.addListener(marker, 'click', function() {
 		infowindow.open(map,marker);
 	});
 </script>
-
-
